--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="center">
+        <button class="email-me-btn" id="show-emailForm">Email me</button>
+    </div>
+    <div class="popup">
+        <div class="close-btn">&times;</div>
+        <div class="form">
+            <h2>Please be specifique </h2>
+            <div class="from-element">
+                <label for="name">You Name:</label>
+                <input type="text" id="name" placeholder="Enter your name">
+            </div>
+            <div class="from-element">
+                <label for="email">You Email:</label>
+                <input type="text" id="email" placeholder="Enter your Email">
+            </div>
+            <div class="from-element">
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" placeholder="Subject">
+            </div>
+            <div class="from-element">
+                <label for="message">You message:</label>
+                <textarea id="message" name="message" rows="4" cols="30"></textarea>
+            </div>
+            <div class="submit-email">
+                <input type="button" value="Send Email">
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <script src="./index.js"></script>
 </body>
 </html>
