form and email btn and css position done

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="popup">
         <div class="close-btn">&times;</div>
         <div class="form">
-            <h2>Please be specifique </h2>
-            <div class="from-element">
-                <label for="name">You Name:</label>
+            <h2 class="title">Please be specifique </h2>
+            <div class="form-element">
+                <label for="name">Your Name:</label>
                 <input type="text" id="name" placeholder="Enter your name">
             </div>
-            <div class="from-element">
-                <label for="email">You Email:</label>
+            <div class="form-element">
+                <label for="email">Your Email:</label>
                 <input type="text" id="email" placeholder="Enter your Email">
             </div>
-            <div class="from-element">
+            <div class="form-element">
                 <label for="subject">Subject:</label>
                 <input type="text" id="subject" placeholder="Subject">
             </div>
-            <div class="from-element">
+            <div class="form-element">
                 <label for="message">You message:</label>
                 <textarea id="message" name="message" rows="4" cols="30"></textarea>
             </div>
