Css done Js done feature done maybe sone quality improvement needed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
             <div class="form-element">
                 <label for="message">You message:</label>
-                <textarea id="message" name="message" rows="4" cols="30"></textarea>
+                <textarea id="message" name="message" ></textarea>
             </div>
-            <div class="submit-email">
-                <input type="button" value="Send Email">
+            <div class="form-element">
+                <button type="button">Send Email</button> 
             </div>
 
         </div>
